--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
           <img src="assets/icon-twitter.svg" onload="SVGInject(this)" />
         </div>
 
-        <input type="checkbox" style="display:none" id="bx">
-        <label for="bx">
-          <div class="bx mr-2">
-          </div>
-        </label>
+        <div class="labelMenu">
+          <input type="checkbox" style="display:none" id="bx">
+          <label for="bx">
+            <div class="bx mr-2">
+            </div>
+          </label>
+        </div>
 
       </nav>
     </header>
